--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ a.out
 local.properties
 Laser Harp Top and Sides.gcode
 Bottom Rail Laser Harp.gcode
+.pyc
+Code/Test Files/__pycache__/LLAudio.cpython-312.pyc
+Code/Test Files/__pycache__/LLGui.cpython-312.pyc
+Code/Test Files/__pycache__/LLMain.cpython-312.pyc
