working sustain sound that overlaps and is mostly a success, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ Bottom Rail Laser Harp.gcode
 Code/Test Files/__pycache__/LLAudio.cpython-312.pyc
 Code/Test Files/__pycache__/LLGui.cpython-312.pyc
 Code/Test Files/__pycache__/LLMain.cpython-312.pyc
+Code/Test Files/__pycache__/LLAudio.cpython-311.pyc
+Code/Test Files/__pycache__/LLGui.cpython-311.pyc
+Code/Test Files/__pycache__/LLMain.cpython-311.pyc
