--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,4 @@ local.properties
 Laser Harp Top and Sides.gcode
 Bottom Rail Laser Harp.gcode
 .pyc
-Code/Test Files/__pycache__/LLAudio.cpython-312.pyc
-Code/Test Files/__pycache__/LLGui.cpython-312.pyc
-Code/Test Files/__pycache__/LLMain.cpython-312.pyc
-Code/Test Files/__pycache__/LLAudio.cpython-311.pyc
-Code/Test Files/__pycache__/LLGui.cpython-311.pyc
-Code/Test Files/__pycache__/LLMain.cpython-311.pyc
+Code/Test Files/__pycache__
