--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Code/Test Files/__pycache__/LLMain.cpython-312.pyc
 Code/Test Files/__pycache__/LLAudio.cpython-311.pyc
 Code/Test Files/__pycache__/LLGui.cpython-311.pyc
 Code/Test Files/__pycache__/LLMain.cpython-311.pyc
+Code/Test Files/__pycache__/LLHelpers.cpython-311.pyc
+Code/Test Files/__pycache__/LLLooping.cpython-311.pyc
+temp.py
