--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ Code/Test Files/__pycache__/LLLooping.cpython-311.pyc
 temp.py
 Code/Test Files/__pycache__/LLHelpers.cpython-311.pyc
 Code/Test Files/__pycache__/LLLooping.cpython-311.pyc
+Code/Test Files/__pycache__/LLHelpers.cpython-311.pyc
+Code/Test Files/__pycache__/LLLooping.cpython-311.pyc
+*.pyc
